--- a/src/modules/getStarted/pages/home/GetStartedPage.module.css
+++ b/src/modules/getStarted/pages/home/GetStartedPage.module.css
@@ -36,6 +36,22 @@
   margin-bottom: 3rem;
 }
 
+.logo {
+  width: 80px;
+  height: 80px;
+  margin-bottom: 1.5rem;
+  animation: logoSpin infinite 20s linear;
+}
+
+@keyframes logoSpin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .title {
   font-size: 2.5rem;
   font-weight: 700;
